# slowkey

./: .gitignore  Cargo.toml  LICENSE  OPTIMIZATION.md  README.md  build.sh  release.sh  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  main.rs  slowkey.rs  stability.rs
src/utils/: argon2id.rs  chacha20poly1305.rs  checkpoint.rs  color_hash.rs  file_lock.rs  log.rs  mod.rs  output.rs  scrypt.rs  sodium_init.rs
src/utils/algorithms/: argon2id.rs  balloon_hash.rs  mod.rs  scrypt.rs
src/utils/checkpoints/: checkpoint.rs  mod.rs  version.rs
src/utils/inputs/: mod.rs  secret.rs
src/utils/outputs/: fingerprint.rs  mod.rs  output.rs
