[package]
authors = ["Leonid Beder <leonid@lbeder.com>"]
edition = "2021"
name = "slowkey"
version = "1.1.2"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.17", features = ["derive", "string"] }
color-backtrace = "0.6.1"
crossterm = "0.27.0"
hex = "0.4.3"
humantime = "2.1.0"
mimalloc = { version = "0.1.43", default-features = false }
sha2 = "0.10.8"
sha3 = "0.10.8"
lazy_static = "1.5.0"
base64 = "0.21.7"
bs58 = "0.5.1"
libsodium-sys-stable = { version = "1.21.1", features = ["optimized"] }
dialoguer = "0.11.0"
tempfile = "3.12.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chacha20poly1305 = "0.10.1"
glob = "0.3.1"
indicatif = "0.17.8"
chrono = "0.4.38"

[dev-dependencies]
rstest = "0.18.2"

[profile.release]
panic = "abort"

[profile.profile]
debug = true
inherits = "release"
