[package]
authors = ["Leonid Beder <leonid@lbeder.com>"]
edition = "2021"
name = "slowkey"
version = "2.12.0"

[dependencies]
balloon-hash = "0.4.0"
base64 = "0.21.7"
better-panic = "0.3.0"
bs58 = "0.5.1"
byteorder = "1.5.0"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive", "string"] }
color-backtrace = "0.6.1"
criterion = "0.5.1"
crossterm = "0.27.0"
dialoguer = "0.11.0"
fs2 = "0.4.3"
glob = "0.3.2"
hex = "0.4.3"
humantime = "2.2.0"
indicatif = "0.17.11"
libsodium-sys-stable = { version = "1.22.3", features = ["optimized"] }
mimalloc = { version = "0.1.46", default-features = false }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sha3 = "0.10.8"

[dev-dependencies]
rstest = "0.18.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.profile]
debug = true
inherits = "release"
